--- a/assets/css/sass/widgets.scss
+++ b/assets/css/sass/widgets.scss
@@ -1965,7 +1965,8 @@ body #site-footer-widgets.site-footer-section {
             border: 1px solid #22b5ce;
         }
         &.geodir_bestof_widget,
-        &.geodir_event_listing {
+        &.geodir_event_listing,
+        &.geodir_popular_post_view {
             .geodir_category_list_view {
                 li {
                     background: rgba(0, 0, 0, 0.25);
@@ -2009,7 +2010,8 @@ body #site-footer-widgets.site-footer-section {
         }
         &.widget.geodir_loginbox {
             .geodir-loginbox-list {
-                background: rgba(0, 0, 0, 0.25);
+                padding: 0;
+                background: none;
                 .geodir-chosen-container.geodir-chosen-container-single{
                     .chosen-single,
                     .chosen-drop {
@@ -2182,7 +2184,7 @@ body #site-footer-widgets.site-footer-section {
                         }
                     }
                     &:nth-child(4) {
-                        margin-bottom: 15px;
+                        margin-bottom: 10px;
                     }
                 }
             }
