--- a/assets/css/sass/containers.scss
+++ b/assets/css/sass/containers.scss
@@ -2298,3 +2298,17 @@ body.single {
         border-radius: 4px;
     }
 }
+
+@media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min-resolution: 144dpi) {
+    .chosen-rtl .chosen-search input[type="text"],
+    .geodir-chosen-container-single .chosen-single abbr,
+    .geodir-chosen-container-single .chosen-single div b,
+    .geodir-chosen-container-single .chosen-search input[type="text"],
+    .geodir-chosen-container-multi .chosen-choices .search-choice .search-choice-close,
+    .geodir-chosen-container .chosen-results-scroll-down span,
+    .geodir-chosen-container .chosen-results-scroll-up span {
+        background-image: none!important;
+        background-size: 0px !important;
+        background-repeat: no-repeat !important;
+    }
+}
