Added GD Taxonomy and Archive header overlay setting.

--- a/assets/css/sass/containers.scss
+++ b/assets/css/sass/containers.scss
@@ -1,6 +1,6 @@
 .flocks-header-color-contrast-enabled {
     #masthead {
-        background: rgba(0, 0, 0, 0.55);
+        background: rgba(0,0,0,0.87);
     }
 }
 .header-style-3,
